# telegram-mini-app-template

./: .env.example  .gitignore  Caddyfile  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 202606100001_create_users.py  639b827ab795_add_notes.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  health.py  notes.py  users.py
backend/app/core/: config.py  security.py  telegram.py
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  note.py  user.py
backend/app/schemas/: note.py  user.py
backend/app/services/: notes.py  users.py
backend/tests/: conftest.py  test_health.py  test_notes.py  test_telegram_auth.py
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: Button.tsx  Card.tsx  ErrorState.tsx  Layout.tsx  Loader.tsx  Page.tsx
frontend/src/lib/: telegram.ts
frontend/src/pages/: HomePage.tsx  NotesPage.tsx  ProfilePage.tsx
frontend/src/styles/: global.css
scripts/: create_bot_commands.py
